# infilmation

./: .env  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  docker-compose.ci.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  environment.yml  package-lock.json  package.json  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: backend_deploy.yaml  frontend_deploy.yaml  test.yaml
api/: environment.yml  requirements.txt  setup.py
api/infilmation/: __init__.py  main.py  models.py
backend/: .dockerignore  .env  .env.test  .flake8  .gcloudignore  Dockerfile  cloudbuild.yaml  pyproject.toml
backend/app/: crud.py  db.py  main.py
backend/app/api/: __init__.py  films.py  movies.py  utils.py
backend/app/core/: config.py
backend/app/models/: __init__.py  film.py  user.py
backend/app/schemas/: films.py  movies.py
backend/migrations/versions/: 49f0ef5e70c1_add_film_tables.py  50f06a7d2d52_add_users_table.py  8cbdfed375e8_update_rating_columns.py  a31843cbd9d7_add_film_tables.py  ac57319fecc8_made_some_changes.py  c4f273f6f462_add_tmdb_id.py
backend/tests/: conftest.py  test_crud.py
backend/tests/api/: test_films.py  test_movies.py  test_utils.py
backend/tests/fixtures/vcr_cassettes/crud/: dune.yaml  the_revenant.yaml
backend/tests/integration/: conftest.py  test_crud.py
backend/tests/integration/api/: test_films.py
backend/tests/unit/: test_crud.py  test_schemas.py
frontend/: .dockerignore  .eslintignore  .eslintrc.js  Dockerfile  cloudbuild.yaml  package.json
infilmation/: __init__.py  database.py  db.py  docker-compose.yml  main.py  models.py  movie.py  schema.sql
nginx/: nginx.conf
public/: index.html
src/: App.js  index.js
(+124 files in other folders)
